[gd_scene load_steps=2 format=3 uid="uid://c8j6y4v2m1n9"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_ui_s"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ui_s")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="ColorRect" parent="CenterContainer"]
custom_minimum_size = Vector2(4, 4)
layout_mode = 2
color = Color(1, 1, 1, 0.501961)

[node name="BuildMenu" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="BuildMenu"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label1" type="Label" parent="BuildMenu/HBoxContainer"]
layout_mode = 2
text = "[1] Turret"

[node name="Label2" type="Label" parent="BuildMenu/HBoxContainer"]
layout_mode = 2
text = "[2] Missile"

[node name="Label3" type="Label" parent="BuildMenu/HBoxContainer"]
layout_mode = 2
text = "[3] Laser"
